--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="container">
       <h2>Entre em Contato</h2>
       <p>Quer um site profissional para sua marca? Chama a CLONEX!</p>
-      <p>📧 contato@clonex.com.br</p>
+      <p>📧 jony246cash@gmail.com</p>
       <p>📱 Redes sociais: @mrclonex315</p>
     </div>
   </section>
