--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <img src="logos/Logo de Tecnologia CLONEX.png" alt="Minha Logo"width="150">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header><link rel="stylesheet" href="style.css">
+  <header>
     <div class="container">
       <h1>CLONEX DESENVOLVIMENTO</h1>
       <nav>
@@ -52,7 +51,14 @@
   <section id="portfolio">
     <div class="container">
       <h2>Portfólio</h2>
-      <p>Em breve projetos que já impactaram empresas no mundo digital.</p>
+      <div class="projetos-grid">
+        <a href="se7e-assessoria-projeto.html" class="projeto-card">
+          <div class="projeto-conteudo">
+            <h3>SE7E Assessoria e Cerimonial</h3>
+            <p>Desenvolvimento de um site institucional focado em uma experiência mobile, com funcionalidades de contato e agendamento.</p>
+          </div>
+        </a>
+      </div>
     </div>
   </section>
 
@@ -60,8 +66,17 @@
     <div class="container">
       <h2>Entre em Contato</h2>
       <p>Quer um site profissional para sua marca? Chama a CLONEX!</p>
-      <p>📧 jony246cash@gmail.com</p>
-      <p>📱 Redes sociais: @mrclonex315</p>
+      <p>📧 contato@clonex.com.br</p>
+      <div class="social-buttons">
+        <a href="https://www.instagram.com/mrclonex315?igsh=Y284a2x4emF0Mng5" target="_blank" class="social-btn instagram-btn">
+          <img src="logos/instagram logo.png" alt="Instagram" class="social-icon">
+          <span>Instagram</span>
+        </a>
+        <a href="https://wa.me/5569992720204" target="_blank" class="social-btn whatsapp-btn">
+          <img src="logos/WhatsApp_Logo_PNG_Transparente.png" alt="WhatsApp" class="social-icon">
+          <span>WhatsApp</span>
+        </a>
+      </div>
     </div>
   </section>
 
