--- a/index.html
+++ b/index.html
@@ -86,5 +86,8 @@
       <p>&copy; 2025 CLONEX Desenvolvimento. Todos os direitos reservados.</p>
     </div>
   </footer>
+  
+  <!-- Script de Otimização Automática de Tela -->
+  <script src="screen-optimizer.js"></script>
 </body>
 </html>
