--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
             <p>Desenvolvimento de um site institucional focado em uma experiência mobile, com funcionalidades de contato e agendamento.</p>
           </div>
         </a>
+        <a href="notas-do-dev.html" class="projeto-card">
+          <div class="projeto-conteudo">
+            <h3>Conheça-me</h3>
+            <p>Descubra a jornada pessoal do desenvolvedor por trás da CLONEX, suas paixões e experiências que moldaram esta empresa.</p>
+          </div>
+        </a>
       </div>
     </div>
   </section>
@@ -80,12 +86,17 @@
     </div>
   </section>
 
+
+
   <footer>
     <div class="container">
       <img src="logos/Logo de Tecnologia CLONEX.png" alt="Minha Logo"class="logo-footer" width="100">
       <p>&copy; 2025 CLONEX Desenvolvimento. Todos os direitos reservados.</p>
     </div>
   </footer>
+  
+  <!-- Script do Player de Música -->
+  <script src="music-player.js"></script>
   
   <!-- Script de Otimização Automática de Tela -->
   <script src="screen-optimizer.js"></script>
