--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container">
       <h2>Entre em Contato</h2>
       <p>Quer um site profissional para sua marca? Chama a CLONEX!</p>
-      <p>📧 contato@clonex.com.br</p>
+      <p>📧 jony246cash@gmail.com</p>
       <div class="social-buttons">
         <a href="https://www.instagram.com/mrclonex315?igsh=Y284a2x4emF0Mng5" target="_blank" class="social-btn instagram-btn">
           <img src="logos/instagram logo.png" alt="Instagram" class="social-icon">
