--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <h1>CLONEX DESENVOLVIMENTO</h1>
-      <nav>
+      <nav id="nav-menu">
         <ul>
           <li><a href="#inicio">Início</a></li>
           <li><a href="#sobre">Sobre</a></li>
@@ -20,6 +20,11 @@
           <li><a href="#contato">Contato</a></li>
         </ul>
       </nav>
+      <div class="hamburger">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
     </div>
   </header>
 
@@ -86,18 +91,14 @@
     </div>
   </section>
 
-
-
   <footer>
     <div class="container">
-      <img src="logos/Logo de Tecnologia CLONEX.png" alt="Minha Logo"class="logo-footer" width="100">
+      <img src="logos/Logo de Tecnologia CLONEX.png" alt="Minha Logo" class="logo-footer" width="100">
       <p>&copy; 2025 CLONEX Desenvolvimento. Todos os direitos reservados.</p>
     </div>
   </footer>
   
-  <!-- Script do Player de Música -->
+  <script src="script.js"></script>
   <script src="music-player.js"></script>
-  
-  <!-- Script de Otimização Automática de Tela -->
 </body>
 </html>
