--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
   </footer>
   
-  <script src="script.js"></script>
+  <script src="screen-optimizer.js"></script>
   <script src="music-player.js"></script>
 </body>
 </html>
